--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </svg>
                     </div>
                     <h3 class="card-title">SMA Budi Utomo</h3>
-                    <p class="card-subtitle">High School</p>
+                    <p class="card-subtitle">Mathematics and Natural Sciences</p>
                     <p class="card-year">2020 - 2022</p>
                 </div>
 
@@ -182,12 +182,6 @@
                             <p class="card-position">MEMBER - CADRE & ORGANIZATION DIVISION</p>
                             <p class="card-year">2025 - PRESENT</p>
                             <p class="card-description">Involved in organizational development and member training programs at the Engineering Faculty.</p>
-                        </div>
-                        <div class="card">
-                            <h3 class="card-title">OSIS SMA Budi Utomo</h3>
-                            <p class="card-position">SECRETARY - CHARACTER & MORALITY DIVISION</p>
-                            <p class="card-year">2020 - 2021</p>
-                            <p class="card-description">Coordinated programs focused on character development and moral education for high school students.</p>
                         </div>
                     </div>
                 </div>
