--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 &times;
             </button>
 
-            <a href="#" onclick="closeNav()">Home</a>
+            <a href="/" onclick="closeNav()">Home</a>
             <a href="/" onclick="closeNav()">Gear</a> 
         </div>
     </div>
