--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
 
             <a href="/" onclick="closeNav()">Home</a>
-            <a href="/" onclick="closeNav()">Gear</a> 
+            <a href="/Gear/index.html" onclick="closeNav()">Gear</a> 
         </div>
     </div>
     
