--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiki Fahrezi</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     
@@ -20,8 +21,8 @@
                 &times;
             </button>
 
-            <a href="/" onclick="closeNav()">Home</a>
-            <a href="/Gear" onclick="closeNav()">Gear</a> 
+            <a href="#" onclick="closeNav()">Home</a>
+            <a href="Gear/index.html" onclick="closeNav()">Gear</a> 
         </div>
     </div>
     
