--- a/Gear/index.html
+++ b/Gear/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fiki Fahrezi - Gear</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     
@@ -20,7 +21,7 @@
                 &times;
             </button>
 
-            <a href="/" onclick="closeNav()">Home</a> 
+            <a href="../index.html" onclick="closeNav()">Home</a> 
             <a href="#" onclick="closeNav()">Gear</a> 
         </div>
     </div>
