--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
 
             <a href="#" onclick="closeNav()">Home</a>
-            <a href="Gear/index.html" onclick="closeNav()">Gear</a> 
+            <a href="Gear/" onclick="closeNav()">Gear</a> 
         </div>
     </div>
     
