--- a/Gear/index.html
+++ b/Gear/index.html
@@ -21,7 +21,7 @@
                 &times;
             </button>
 
-            <a href="../index.html" onclick="closeNav()">Home</a> 
+            <a href="../" onclick="closeNav()">Home</a> 
             <a href="#" onclick="closeNav()">Gear</a> 
         </div>
     </div>
