--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
                             <div class="card">
                                 <h3 class="card-title">HIMATEKKIM FT ULM</h3>
                                 <p class="card-position">MEMBER - RELIGIOUS DIVISION</p>
-                                <p class="card-year">2025 - PRESENT</p>
+                                <p class="card-year">2025 - 2026</p>
                                 <p class="card-description">Active member contributing to religious activities and community building within the Chemical Engineering department.</p>
                             </div>
                             <div class="card">
                                 <h3 class="card-title">Teknika Cendekia FT ULM</h3>
                                 <p class="card-position">MEMBER - CADRE & ORGANIZATION DIVISION</p>
-                                <p class="card-year">2025 - PRESENT</p>
+                                <p class="card-year">2025</p>
                                 <p class="card-description">Involved in organizational development and member training programs at the Engineering Faculty.</p>
                             </div>
                         </div>
