--- a/Gear/index.html
+++ b/Gear/index.html
@@ -106,6 +106,7 @@
 
     <footer>
         <p>&copy; Copyright 2025 - Fiki Fahrezi. All rights reserved.</p>
+        <p>Last Updated: <span id="lastUpdate"></span></p>
     </footer>
 
     <script src="script.js"></script>
