--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <footer>
             <div class="container footer-content">
                 <p>&copy; Copyright 2025 - Fiki Fahrezi. All rights reserved.</p>
-                <p>Last Updated: <span id="lastUpdate"></span></p>
+                <p>Last Updated: 11 February 2026</p>
             </div>
         </footer>
     </div>
