--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
             </button>
 
             <a href="#" onclick="closeNav()">Home</a>
-            <a href="Gear/" onclick="closeNav()">Gear</a>
-            <a href="Games/" onclick="closeNav()">Games</a>
+            <a href="/Gear/" onclick="closeNav()">Gear</a>
+            <a href="/Games/" onclick="closeNav()">Games</a>
+            <a href="/Items/" onclick="closeNav()">Items</a>
+            <a href="/ComingSoon/" onclick="closeNav()">Playlist</a>
+            <a href="/ComingSoon/" onclick="closeNav()">Wishlist</a>
+            <a href="/ComingSoon/" onclick="closeNav()">Random Fact</a>
+            <a href="/ComingSoon/" onclick="closeNav()">Hall of Fame</a>
         </div>
     </div>
 
@@ -304,7 +309,7 @@
         <footer>
             <div class="container footer-content">
                 <p>&copy; Copyright 2025 - Fiki Fahrezi. All rights reserved.</p>
-                <p>Last Updated: 11 February 2026</p>
+                <p>Last Updated: 18 Desember 2025</p>
             </div>
         </footer>
     </div>
