--- a/Gear/index.html
+++ b/Gear/index.html
@@ -24,6 +24,11 @@
             <a href="../" onclick="closeNav()">Home</a>
             <a href="#" onclick="closeNav()">Gear</a>
             <a href="../Games/" onclick="closeNav()">Games</a>
+            <a href="../Items/" onclick="closeNav()">Items</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Playlist</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Wishlist</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Random Fact</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Hall of Fame</a>
         </div>
     </div>
 
@@ -106,7 +111,7 @@
 
     <footer>
         <p>&copy; Copyright 2025 - Fiki Fahrezi. All rights reserved.</p>
-        <p>Last Updated: <span id="lastUpdate"></span></p>
+        <p>Last Updated: 5 Januari 2026</p>
     </footer>
 
     <script src="script.js"></script>
