--- a/Games/index.html
+++ b/Games/index.html
@@ -20,6 +20,11 @@
             <a href="../" onclick="closeNav()">Home</a>
             <a href="../Gear/" onclick="closeNav()">Gear</a>
             <a href="#" onclick="closeNav()">Games</a>
+            <a href="../Items/" onclick="closeNav()">Items</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Playlist</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Wishlist</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Random Fact</a>
+            <a href="../ComingSoon/" onclick="closeNav()">Hall of Fame</a>
         </div>
     </div>
 
@@ -218,7 +223,7 @@
     <footer>
         <div class="container footer-content">
             <p>&copy; Copyright 2025 - Fiki Fahrezi. All rights reserved.</p>
-            <p>Last Updated: 11 February 2026</p>
+            <p>Last Updated: 15 Februari 2026</p>
         </div>
     </footer>
 
